--- a/templates/ajouter_maintenance.html
+++ b/templates/ajouter_maintenance.html
@@ -65,6 +65,7 @@
                                     <option value="2_semaines" {% if is_edit and maintenance.periodicite == '2_semaines' %}selected{% endif %}>2 semaines</option>
                                     <option value="mois" {% if is_edit and maintenance.periodicite == 'mois' %}selected{% endif %}>Mois</option>
                                     <option value="2_mois" {% if is_edit and maintenance.periodicite == '2_mois' %}selected{% endif %}>2 mois</option>
+                                    <option value="4_mois" {% if is_edit and maintenance.periodicite == '4_mois' %}selected{% endif %}>4 mois</option>
                                     <option value="6_mois" {% if is_edit and maintenance.periodicite == '6_mois' %}selected{% endif %}>6 mois</option>
                                     <option value="1_an" {% if is_edit and maintenance.periodicite == '1_an' %}selected{% endif %}>1 an</option>
                                     <option value="2_ans" {% if is_edit and maintenance.periodicite == '2_ans' %}selected{% endif %}>2 ans</option>
