--- a/templates/pieces.html
+++ b/templates/pieces.html
@@ -10,10 +10,12 @@
             <i class="fas fa-plus"></i>
             <span class="d-none d-sm-inline ms-1">Ajouter</span>
         </a>
+        {% if current_user.is_authenticated and current_user.username == 'admin' %}
         <button type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="modal" data-bs-target="#viderDonneesModal" title="Vider les pièces">
             <i class="fas fa-trash"></i>
             <span class="d-none d-sm-inline ms-1">Vider</span>
         </button>
+        {% endif %}
     </div>
 </div>
 
@@ -43,6 +45,7 @@
     </div>
 </div>
 
+{% if current_user.is_authenticated and current_user.username == 'admin' %}
 <!-- Modal de confirmation pour vider toutes les données -->
 <div class="modal fade" id="viderDonneesModal" tabindex="-1">
     <div class="modal-dialog">
@@ -76,6 +79,7 @@
         </div>
     </div>
 </div>
+{% endif %}
 
 <div class="table-responsive">
     <table class="table table-striped table-hover">
